GNIJ-53 Fixed align thing

--- a/src/scss/nijmegen/navbars.scss
+++ b/src/scss/nijmegen/navbars.scss
@@ -66,6 +66,11 @@
         }
 
         .mdi {
+            position: absolute;
+            right: 0;
+            font-size: 1.5rem;
+            line-height: 1;
+
             &:before {
                 position: absolute;
                 right: 0;
